Heavy changes. Working version of Trip Application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# spring.servlet.multipart.location=C:\\Users\\Alex\\IdeaProjects\\trips\\photos
+server.tomcat.basedir=C:\\Users\\Alex\\IdeaProjects\\trips\\
+
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=15MB
+# spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
