--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-web')
-	//runtimeOnly('org.postgresql:postgresql')
+	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	compile group: 'org.postgresql', name: 'postgresql', version: '9.3-1100-jdbc41'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
